# pathfinder

./: CMakeLists.txt  islands  pathfinder
inc/: pathfinder.h
libmx/: Makefile
libmx/inc/: libmx.h
libmx/src/: mx_binary_search.c  mx_bubble_sort.c  mx_count_substr.c  mx_count_words.c  mx_create_node.c  mx_del_extra_spaces.c  mx_del_strarr.c  mx_file_to_str.c  mx_foreach.c  mx_get_char_index.c  mx_get_substr_index.c  mx_hex_to_nbr.c  mx_isdigit.c  mx_itoa.c  mx_memccpy.c  mx_memchr.c  mx_memcmp.c  mx_memcpy.c  mx_memmem.c  mx_memmove.c  mx_memrchr.c  mx_memset.c  mx_nbr_to_hex.c  mx_pop_back.c  mx_pop_front.c  mx_pow.c  mx_print_strarr.c  mx_printchar.c  mx_printerr.c  mx_printint.c  mx_printstr.c  mx_push_back.c  mx_push_front.c  mx_quicksort.c  mx_realloc.c  mx_replace_substr.c  mx_sort_list.c  mx_sqrt.c  mx_str_reverse.c  mx_strcmp.c  (+12 more)
src/errors/: mx_error1.c  mx_error_file_empty.c  mx_error_file_invalid.c  mx_error_file_invalid_2.c  mx_error_file_or_dir.c  mx_errors_islands.c  mx_errors_main.c
src/main/: main.c
